# hardware-bench

./: .gitignore  Justfile  LICENSE  README.md  models.toml  pyproject.toml
boards/: dragon-q6a.toml  mac-m5pro.toml  orange-pi-5-plus.toml
docs/: virtues-migration-spec.md
results/: mac-m5pro-20260512T212735Z.json  mac-m5pro-20260512T213746Z.json  mac-m5pro-20260512T214204Z.json
src/virtues_bench/: bench.py  datasets.py  models.py  preflight.py  report.py  system.py  timing.py
src/virtues_bench/runners/: onnx_session.py
src/virtues_bench/telemetry/: memory.py  power.py  thermal.py
src/virtues_bench/workloads/: embed.py  memory.py  pgvector.py  rerank.py  thermal_power.py  validate_npu.py
web/: package-lock.json  package.json  svelte.config.js
web/src/lib/server/: results.ts
web/src/routes/: +page.server.ts  +page.svelte
web/src/routes/runs/[file]/: +page.server.ts  +page.svelte
